fix: Re-adjust container view height to fix 100vh issue on mobile device
Changed both style.css and corresponding scss code lines

--- a/public/about.scss
+++ b/public/about.scss
@@ -1,7 +1,7 @@
 /*------------ Who We Are (/About) -------------- */
 .about-container {
   width: 100%;
-  height: 85vh;
+  height: 100%;
   background-color: black;
   font-family: "Didact Gothic", sans-serif;
 }
@@ -59,7 +59,8 @@
 
 #more {
   text-align: center;
-  font-size: 8px; }
+  font-size: 8px; 
+  padding-bottom: 10px; }
 
 #scroll {
   font-size: 8px;
