--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,8 @@ a {
 
 #more {
   text-align: center;
-  font-size: 8px; }
+  font-size: 8px; 
+  padding-bottom: 10px; }
 
 #scroll {
   font-size: 8px;
@@ -155,7 +156,7 @@ p.job-title {
 /*------------ Who We Are (/About) -------------- */
 .about-container {
   width: 100%;
-  height: 85vh;
+  height: 100%;
   background-color: black;
   font-family: "Didact Gothic", sans-serif; }
 
